Adjust board, check and date range picker blocks cross-browser behavior, fix IE11 wrap issue in a table block

--- a/sass/blocks/_boss-board.sass
+++ b/sass/blocks/_boss-board.sass
@@ -435,6 +435,8 @@ $block: ".boss-board"
 
   // $Board manager area
   &__manager
+    display: block
+    width: 100%
     padding: 20px 20px 30px
 
 
@@ -456,6 +458,8 @@ $block: ".boss-board"
   // $Board manager area data
   &__manager-data
     position: relative
+    display: block
+    width: 100%
     z-index: 5
     border: 1px solid #e6e6e6
     border-radius: 10px
@@ -468,10 +472,13 @@ $block: ".boss-board"
 
   // $Board manager area filter
   &__manager-filter
+    display: block
+    width: 100%
     padding: 15px 30px
     background-color: #f9f9f9
 
     @media screen and (max-width: 960px)
+      padding: 30px
       margin-bottom: 30px
       background-color: #FFF
       border-radius: 10px
@@ -480,6 +487,8 @@ $block: ".boss-board"
 
   // $Board manager area table
   &__manager-table
+    display: block
+    width: 100%
 
 
   // $Board calendar
