--- a/sass/blocks/_boss-check.sass
+++ b/sass/blocks/_boss-check.sass
@@ -158,6 +158,7 @@ $block: ".boss-check"
 
     &_type_accent
       color: map-get($boss-app-palette, primary)
+      font-weight: 600
 
     // $Check block text MOD: role date
     &_role_date
@@ -371,6 +372,8 @@ $block: ".boss-check"
 
       &:before
         content: ""
+        flex-grow: 0
+        flex-shrink: 0
         display: block
         width: 48px
         height: 48px
@@ -416,7 +419,11 @@ $block: ".boss-check"
   &__action
     flex-grow: 1
     width: 50%
+    padding: 15px
     border-radius: 0
     text-align: center
+
+    @media screen and (max-width: 400px)
+      padding: 15px
 
 
