--- a/sass/blocks/_boss-count.sass
+++ b/sass/blocks/_boss-count.sass
@@ -18,8 +18,6 @@ $block: ".boss-count"
   +box-model-normalizer()
 
   display: inline-block
-  width: auto
-  max-width: 100%
   padding: 10px
   border: 2px solid #c4c4c4
   border-radius: 6px
@@ -28,9 +26,7 @@ $block: ".boss-count"
   &_adjust_group
     flex-grow: 1
     flex-shrink: 1
-
-    @media screen and (max-width: 960px)
-      width: 100%
+    width: 100%
 
     &:not(:last-child)
       margin-right: 15px
@@ -66,6 +62,11 @@ $block: ".boss-count"
 
   &__label
     +text-normalizer()
+    flex-grow: 1
+    flex-shrink: 1
+    display: block
+    width: 100%
+    max-width: 100%
     padding-top: 2px
     font-weight: 600
 
