--- a/sass/blocks/_date-range-picker.sass
+++ b/sass/blocks/_date-range-picker.sass
@@ -18,8 +18,8 @@ $block: ".date-range-picker"
   display: block
   width: 100%
 
-  & .DateRangePicker,
-  & .DateRangePickerInput
+  & .DateRangePicker
+    display: block
     width: 100%
 
   & .DateRangePickerInput
@@ -27,6 +27,7 @@ $block: ".date-range-picker"
     flex-direction: row
     justify-content: flex-start
     align-items: center
+    width: 100%
 
     @media screen and (max-width: 400px)
       white-space: nowrap
